src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Dealer_DMS__c</fullName>
        <label>DMS</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMWIN</fullName>
                </value>
                <value>
                    <fullName>AS 400</fullName>
                </value>
                <value>
                    <fullName>ASW</fullName>
                </value>
                <value>
                    <fullName>Auto IT PMDS Viaduct 2000</fullName>
                </value>
                <value>
                    <fullName>Auto IT (Equip)</fullName>
                </value>
                <value>
                    <fullName>Auto IT (Units)</fullName>
                </value>
                <value>
                    <fullName>Auto Mac</fullName>
                </value>
                <value>
                    <fullName>Auto Quote</fullName>
                </value>
                <value>
                    <fullName>DMS Quote plus</fullName>
                </value>
                <value>
                    <fullName>Easy Mate (Global Soultions)</fullName>
                </value>
                <value>
                    <fullName>Gateway Solutions – Voyager</fullName>
                </value>
                <value>
                    <fullName>Global Dealer Systems</fullName>
                </value>
                <value>
                    <fullName>Leading Hand</fullName>
                </value>
                <value>
                    <fullName>Markinson</fullName>
                </value>
                <value>
                    <fullName>No DMS</fullName>
                </value>
                <value>
                    <fullName>NOVA - Reynolds</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>PPG</fullName>
                </value>
                <value>
                    <fullName>Quick Books</fullName>
                </value>
                <value>
                    <fullName>Quote Plus</fullName>
                </value>
                <value>
                    <fullName>Revolutions</fullName>
                </value>
                <value>
                    <fullName>Reynolds CFS / Dealer Pro</fullName>
                </value>
                <value>
                    <fullName>Titan</fullName>
                </value>
                <value>
                    <fullName>Unifleet</fullName>
                </value>
                <value>
                    <fullName>VQS</fullName>
                </value>
                <value>
                    <fullName>Goldmine</fullName>
                </value>
                <value>
                    <fullName>ERA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Dated_Started_Fuso__c</fullName>
        <label>Dated Started Fuso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Dated_Started_MBAuP__c</fullName>
        <label>Dated Started MBAuP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Dealership_Type__c</fullName>
        <label>Dealership Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MBAuP</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Default_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Function:  Indicates that this dealer is unique and should be visible in SFDC.  Defined by the GSSN interface. 

Feb18-2013-  Rob and Falk - based on GSSN interface requirements</description>
        <label>Dealer Default Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Due_Diligence__c</fullName>
        <label>Due Diligence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Email_System__c</fullName>
        <label>Dealer Email System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Email__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer&apos;s general email address 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_Email&quot;</description>
        <label>Dealer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Emergency_Number__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: A phone number provided by the dealer for emergency cases outside of business hours 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_EmergencyNumber&quot;</description>
        <label>Dealer Emergency Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Fax_Parts__c</fullName>
        <label>Dealer Fax (Parts)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Fax_Service__c</fullName>
        <label>Dealer Fax (Service)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Field_Force_Manager_Email__c</fullName>
        <description>&quot;GAP-Add Dealer Fieldforce Manager (TextArea) field and Dealer Fieldforce Manager Email to be added for Sales, Aftersales and FS</description>
        <label>Dealer Field Force Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Field_Force_Manager__c</fullName>
        <description>&quot;GAP-Add Dealer Fieldforce Manager (TextArea) field and Dealer Fieldforce Manager Email to be added for Sales, Aftersales and FS</description>
        <label>Dealer Field Force Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_AS__c</fullName>
        <label>Dealer Fieldforce Manager AS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_EmailFS__c</fullName>
        <label>Dealer Fieldforce Manager EmailFS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_EmailSales__c</fullName>
        <label>Dealer Fieldforce Manager EmailSales</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_Email_AS__c</fullName>
        <label>Dealer Fieldforce Manager Email AS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_FS__c</fullName>
        <label>Dealer Fieldforce Manager FS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fieldforce_Manager_Sales__c</fullName>
        <label>Dealer Fieldforce Manager Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Financial_Service_Region__c</fullName>
        <label>Financial Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Plan Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan_Value__c</fullName>
        <label>Floor Plan Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan__c</fullName>
        <label>Floor Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_GC_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: GS Code of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_GCcode &quot;</description>
        <label>Dealer GC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_GS_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: GC Code of code 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Dealer GS Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_General_Manager_Email__c</fullName>
        <description>Email of General Manager from GSSN</description>
        <label>Dealer General Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_General_Manager__c</fullName>
        <description>Dealer General Contact - updated by the GSSN system 
Read only in SFDC  
Textbox field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer General Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <label>Dealer Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yanase</fullName>
                </value>
                <value>
                    <fullName>Stern</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Cars__c</fullName>
        <label>ICC Dealer Code Cars</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Freightliner__c</fullName>
        <label>ICC Dealer Code Freightliner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Fuso__c</fullName>
        <label>ICC Dealer Code Fuso</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_MB_Trucks__c</fullName>
        <label>ICC Dealer Code MB Trucks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Unimog__c</fullName>
        <label>ICC Dealer Code Unimog</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Vans__c</fullName>
        <label>ICC Dealer Code Vans</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Gate_Keeper_Name__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-15) 
Function: Full Name of Assigned Dealer

Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>Dealer_Lead_Gate_Keeper__r.Contact.LastName + &quot; &quot; +  Dealer_Lead_Gate_Keeper__r.Contact.FirstName</formula>
        <label>*Dealer Lead Gate Keeper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Gate_Keeper_Title__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-15) 
Function: Title of  Assigned Dealer

Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>Dealer_Lead_Gate_Keeper__r.Contact.Title</formula>
        <label>*Dealer Lead Gate Keeper Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Gate_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-15) 
Function: Used in Email Template

Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>*Dealer Lead Gate Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_System__c</fullName>
        <label>Dealer Lead System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>MBC POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Legal_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute in Data Dictionary object Dealer is &quot;Dealer_isLegalEntity&quot;</description>
        <label>Dealer Legal Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Legal_NativeCode__c</fullName>
        <label>Dealer Native Legal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Licence_Number__c</fullName>
        <label>Dealer Licence Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_MBFS_Review_Date__c</fullName>
        <label>MBFS Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_MB_Sub_Region__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subregion of MB dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_RegionSubMB&quot;</description>
        <label>Dealer MB Sub-Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dealer_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH1</fullName>
                </value>
                <value>
                    <fullName>NORTH2</fullName>
                </value>
                <value>
                    <fullName>NORTH3</fullName>
                </value>
                <value>
                    <fullName>SOUTH1</fullName>
                </value>
                <value>
                    <fullName>SOUTH2</fullName>
                </value>
                <value>
                    <fullName>EAST1</fullName>
                </value>
                <value>
                    <fullName>EAST2</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
                <value>
                    <fullName>EAST3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Manual_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Manual Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Marketing_Manager_Email__c</fullName>
        <label>Dealer Marketing Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Marketing_Manager__c</fullName>
        <label>Dealer Marketing Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_ND_Code__c</fullName>
        <description>Added based on the GSSN interface mapping

Feb-18-2012: Added by Rob and Falk</description>
        <externalId>true</externalId>
        <label>Dealer ND Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_New_No_Spare_Parts__c</fullName>
        <label>New No. Spare Parts</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_NonWorkingDay_Service__c</fullName>
        <label>Dealer Non Working Day Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_NonWorking_Day__c</fullName>
        <label>Dealer Non Working Day (Sales)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Operating_System_Other__c</fullName>
        <label>Dealer Operating System Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Operating_System__c</fullName>
        <label>Dealer Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Sockets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Parent_Code__c</fullName>
        <label>Parent Dealer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone_Service__c</fullName>
        <label>Dealer Phone (Service)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone__c</fullName>
        <label>Dealer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Portal_Modules__c</fullName>
        <label>Dealer Portal Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lead (Sales)</fullName>
                </value>
                <value>
                    <fullName>Lead (Aftersales)</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Presales_Email__c</fullName>
        <description>Email of Presales inquiry responsible person from GSSN</description>
        <label>Dealer Presales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Presales__c</fullName>
        <description>Dealer PreSales Contact - updated by the GSSN system 
Read only in SFDC 
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Presales</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Province__c</fullName>
        <label>Dealer Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Reason_for_Inactivation__c</fullName>
        <label>MB Reason for Inactivation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MB Reason for Inactivation</fullName>
                </value>
                <value>
                    <fullName>The franchised business ceased to operate.</fullName>
                </value>
                <value>
                    <fullName>The franchise agreement was terminated by the franchisor:</fullName>
                </value>
                <value>
                    <fullName>The franchise agreement was terminated by the franchisee.</fullName>
                </value>
                <value>
                    <fullName>The franchise agreement was not renewed when it expired.</fullName>
                </value>
                <value>
                    <fullName>The franchised business was bought back by the franchisor.</fullName>
                </value>
                <value>
                    <fullName>The franchise agreement was terminated and the franchised business was acquired by the franchisor.</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Region of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_Region&quot;</description>
        <label>Dealer Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH</fullName>
                </value>
                <value>
                    <fullName>SOUTH</fullName>
                </value>
                <value>
                    <fullName>EAST</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Representative__c</fullName>
        <label>Dealer Representative</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Rollout_Status__c</fullName>
        <description>To manage status of Rollout. Value should be &quot;Not Yet&quot;, &quot;In_Progress&quot;, &quot;Done&quot;</description>
        <label>Dealer Rollout Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>In_Progress</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_SAP_MB_Trucks_Freightliner__c</fullName>
        <label>SAP MB Trucks/Freightliner</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_Cars__c</fullName>
        <label>SPICS II Cars</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_MB_Trucks_Freigthliner__c</fullName>
        <label>SPICS II MB Trucks/Freigthliner</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SPICS_II_Vans__c</fullName>
        <label>SPICS II Vans</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_SSI_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Status of dealer&apos;s participation in the SSI program 
Used in: Page Layouts, Reports 

Modify History March 03, 2013
Modify By: Lio Huang
Modify Reason: Added the prefix &quot;Dealer&quot;, which indicates this field will only be used at dealer
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_NoSSI&quot;</description>
        <label>Dealer SSI Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Manager_Email__c</fullName>
        <description>Email of Sales Manager from GSSN</description>
        <label>Dealer Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Manager__c</fullName>
        <description>Dealer Sales Contact - updated by the GSSN system
Read only in SFDC
Textbox field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Sales Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Type__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The sales type of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_SalesType&quot;</description>
        <label>Dealer Sales Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Star-Elite</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Sales_func__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Sales Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Service_Codes__c</fullName>
        <description>Dealer Services - based on the GSSN interface for the Dealer ActivityDefCodes

Feb-18-2012: Added by Rob and Falk
Attribute in Data Dictionary object Dealer is &quot;Dealer_Service&quot;</description>
        <label>Dealer Service Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Body Repair</fullName>
                </value>
                <value>
                    <fullName>Paint Shop</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>DSC Level 4</fullName>
                </value>
                <value>
                    <fullName>Aftersales</fullName>
                </value>
                <value>
                    <fullName>AMG Performance Center</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>MBCPOS</fullName>
                </value>
                <value>
                    <fullName>Mbconnect</fullName>
                </value>
                <value>
                    <fullName>Used Car Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Service_Func__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Service Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Trading_Hours_Parts__c</fullName>
        <label>Trading Hours Parts</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Trading_Hours_Service__c</fullName>
        <label>Trading Hours Service</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Dlr_Class_Sales__c</fullName>
        <label>Trucks Dlr Class Sales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_OES_Survey_Targets_Yearly__c</fullName>
        <label>Trucks OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_PES_Target_Yearly__c</fullName>
        <label>Trucks PES Target - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Sales_Region__c</fullName>
        <label>Trucks Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Trucks_Service_Region__c</fullName>
        <label>Trucks Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Outlet</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_UsedCarCorner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer UsedCarCorner Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_UsedCar_Func__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer UsedCar Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Dlr_Class__c</fullName>
        <label>Vans Dlr Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Vans_OES_Survey_Targets_Yearly__c</fullName>
        <label>Vans OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_PES_Target_Yearly__c</fullName>
        <label>Vans PES Target - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Sales_Region__c</fullName>
        <label>Vans Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Vans_Service_Region__c</fullName>
        <label>Vans Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>